--- a/test.yaml
+++ b/test.yaml
@@ -8,4 +8,4 @@ metadata:
 spec:
   containers:
     - name: mypod
-      image: nginx
+      image: 352708296901.dkr.ecr.eu-central-1.amazonaws.com/alexey_bot_dev:BOT_DEV_2
