--- a/common/config.json
+++ b/common/config.json
@@ -1,5 +1,6 @@
 {
   "aws_region": "<region-id>",
   "videos_bucket": "<videos-bucket>",
-  "bot_to_worker_queue_name": "<sqs-queue>"
+  "bot_to_worker_queue_name": "<sqs-queue>",
+
 }
