--- a/common/config.json
+++ b/common/config.json
@@ -1,7 +1,5 @@
 {
-  "aws_region": "<region-id>",
-  "videos_bucket": "<videos-bucket>",
-
-  "bot_to_worker_queue_name": "<sqs-queue>",
-
+  "aws_region": "eu-central-1",
+  "videos_bucket": "alexey-dima-video-bucket",
+  "bot_to_worker_queue_name": "alexey-dima-queue"
 }
