--- a/common/config.json
+++ b/common/config.json
@@ -1,6 +1,6 @@
 {
   "aws_region": "eu-central-1",
   "videos_bucket": "alexey-dima-video-bucket",
-  "bot_to_worker_queue_name": "alexey-dima-queue",
+  "bot_to_worker_queue_name": "alexey-dima-queue"
 
 }
