--- a/services/bot/Dockerfile
+++ b/services/bot/Dockerfile
@@ -5,4 +5,4 @@ COPY . .
 RUN pip install -r $APP_PATH/requirements.txt
 
 
-CMD ["python3", "services/bot/app.py"]
+CMD ["python3", "-m" "services.bot.app"]
